--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,23 @@ btn:hover:before{
 transform: scale(0);
 transform: 0.5s;
 }
+@media screen and (max-width: 396px) {
+    .container{
+      /* background-color: rgb(0, 0, 0); */
+    width: 19rem;
+    height: 24rem;
+    }
+    .username{
+        width: 280px; 
+        margin-left: 7px;
+    }
+   .password{
+        width: 280px; 
+        margin-left: 7px;
+   }
+   .btn-outline-primary{
+    width: 250px; 
+    height: 35px;
+    margin-left: 7px;
+   }
+  }
